src/test/ui/uninhabited/uninhabited-irrefutable.stderr
error[E0005]: refutable pattern in local binding: `A(_)` not covered
  --> $DIR/uninhabited-irrefutable.rs:37:9
   |
LL |     let Foo::D(_y) = x; //~ ERROR refutable pattern in local binding: `A(_)` not covered
   |         ^^^^^^^^^^ pattern `A(_)` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
